--- a/package.json
+++ b/package.json
@@ -31,19 +31,24 @@
     "@nestjs/common": "^8.4.0",
     "@nestjs/config": "^1.2.0",
     "@nestjs/core": "^8.4.0",
+    "@nestjs/mongoose": "^9.0.2",
     "@nestjs/platform-express": "^8.4.0",
     "@nestjs/serve-static": "^2.2.2",
     "@nestjs/swagger": "^5.2.0",
-    "@nestjs/typeorm": "^8.0.3",
+    "@nestjs/typeorm": "^8.0.2",
     "bull": "^4.7.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
-    "pg": "^8.7.3",
+    "mongodb": "^4.4.1",
+    "mongoose": "^6.2.6",
+    "mongoose-polymer": "^0.1.0",
+    "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.5",
     "swagger-ui-express": "^4.3.0",
-    "typeorm": "^0.2.45"
+    "typeorm": "^0.2.36",
+    "typeorm-polymorphic": "0.0.10"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.5.1",
